syntax = "proto3";

package profile;

option go_package = "profile_service/pkg/grpc_generated/profile";

service AuthorizationService {
  rpc CanSendDirect (CanSendDirectRequest) returns (CanSendDirectResponse);
  rpc CanJoinRoom   (CanJoinRoomRequest)   returns (CanJoinRoomResponse);
}

message CanSendDirectRequest {
  int64 from_user_id = 1;
  int64 to_user_id   = 2;
}

message CanSendDirectResponse {
  bool allowed = 1;
  string reason = 2;
}

message CanJoinRoomRequest {
  int64 user_id = 1;
  int64 room_id = 2;
}

message CanJoinRoomResponse {
  bool allowed = 1;
  string reason = 2;
}